# hdl-register-wizard

./: .gitignore  404.html  BUILDING.md  Cargo.toml  Dioxus.toml  LICENSE  README.md  build.rs  building.md  cargo.tree  hdl_register_wizard-3497c52996e83e35.js  hdl_register_wizard-3497c52996e83e35_bg.wasm  hdl_register_wizard-4f2c2b43c6eb3c18.js  hdl_register_wizard-4f2c2b43c6eb3c18_bg.wasm  hdl_register_wizard-672db42d7c0b8a5e.js  hdl_register_wizard-672db42d7c0b8a5e_bg.wasm  hdl_register_wizard-739b77be236a294a.js  hdl_register_wizard-c8f76b996e7a2128.js  hdl_register_wizard-c8f76b996e7a2128_bg.wasm  hdlregisterwizard.flatpak  hdlregisterwizard.msi  icons.css  index.html
.github/workflows/: compile.yml  develmsi.yml  flatpak.yml  wasm-pages.yml
assets/dioxus/: HDL Register Wizard.js  HDL Register Wizard.js.br  HDL Register Wizard_bg.wasm.br
assets/dioxus/snippets/dioxus-interpreter-js-6c374cd401497f7c/: inline0.js  inline0.js.br
assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js  inline0.js.br
docs/: index.html
docs/assets/dioxus/snippets/dioxus-interpreter-js-1676574062e4c953/: inline0.js
examples/: irqc.regwiz  uart.regwiz
install/: LICENSE.rtf  createmsi.bat  hdlregisterwizard-user.wxs  hdlregisterwizard.wxs  install-linux.sh  uninstall-linux.sh
install/flatpak/: build.sh  org.becoz.hdlregisterwizard.desktop  org.becoz.hdlregisterwizard.metainfo.xml  org.becoz.hdlregisterwizard.yml
msi/: hdlregisterwizard-user.msi  hdlregisterwizard.msi
pages/assets/dioxus/: dioxus.js
snippets/dioxus-interpreter-js-7853214f69bd9fe6/: inline0.js
snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js
src/: app.rs  assets.rs  file_formats.rs  file_io.rs  file_io_web.rs  generate.rs  gui_blocks.rs  gui_types.rs  intro-page.md  keys.rs  lib.rs  main.rs  mdf_format.rs  mdf_process.rs  model_gui.rs  navigation.rs  page.rs  settings.rs  style.css  tests.rs  undo.rs  utils.rs
src/css/: brands.css  solid.css
src/file_formats/: mdf.rs  mdf_10.rs
src/generate/: documentation.rs  generror.rs  genmodel.rs  output.rs  signal_list.rs  templates.rs  tokenlist.rs  user_strings.rs
src/generate/templates/: documentation.md  documentation_interface.md
src/live_help/: bitfield-bottom.md  bitfield-top.md  interface.md  preview.md  project.md  register-access.md  register-bottom-normal.md  register-med-bitfield.md  register-med-normal.md  register-top.md
src/page/: edit.rs  field.rs  html_elements.rs  interface.rs  preview.rs  project.rs  register.rs  settings.rs  settings_strings.rs
src/templates/: documentation.md  list.json
src/tests/: address.rs  opt_vec_str.rs  tokenlist.rs  vector_value.rs
