[package]
version = "0.1.0"
name = "hdl_register_wizard"
repository = "https://github.com/daixiwen/hdl-register-wizard"
authors = ["Sylvain Tertois <sylvain-gith@becoz.org>"]
description = "Register HDL code generator wizard"
categories = ["vhdl", "code-generation", "documentation-generation"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
directories-next = "2.0.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.59"
strum = "0.19.5"
strum_macros = "0.19.4"

[profile.release]
#lto = true
#opt-level = 'z'
#codegen-units = 1
opt-level = 2 # fast and small wasm

