[package]
version = "0.1.0"
name = "hdl_register_wizard"
repository = "https://github.com/daixiwen/hdl-register-wizard"
authors = ["Sylvain Tertois <sylvain-gith@becoz.org>"]
description = "Register HDL code generator wizard"
categories = ["vhdl", "code-generation", "documentation-generation"]
license = "MIT"
readme = "./README.md"
edition = "2018"

#[lib]
#crate-type = ["cdylib", "rlib"]

[build-dependencies]
mini_markdown = "0.3.5"

[dependencies]
dioxus = "0.3.2"
futures-timer = "3.0.2"
rfd = { version = "0.10.0", default-features = false, features = ["xdg-portal"] }
serde = { version = "1.0.116", features = ["derive", "rc"] }
serde_json = "1.0.59"
strum = "0.19.5"
strum_macros = "0.19.4"
#docx-rs = "0.2"
tinytemplate = "1.2.1"
unidecode = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.86"
getrandom = { version = "0.2.3", features = ["js"]}
dioxus-web = "0.3.2"
web-sys = { version = "0.3", features = [ "Storage", "Window" ] }
js-sys = "0.3.64"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-desktop = "0.3.0"
getrandom = "0.2.3"
directories-next = "2.0.0"

[profile.release]
#lto = true
#opt-level = 'z'
#codegen-units = 1
opt-level = 2 # fast and small wasm

