[package]
version = "0.1.0"
name = "hdl_register_wizard"
repository = "https://github.com/daixiwen/hdl-register-wizard"
authors = ["Sylvain Tertois <sylvain-gith@becoz.org>"]
description = "Register HDL code generator wizard"
categories = ["vhdl", "code-generation", "documentation-generation"]
license = "MIT"
readme = "./README.md"
edition = "2021"

#[lib]
#crate-type = ["cdylib", "rlib"]

[build-dependencies]
mini_markdown = "0.3.5"

[dependencies]
futures-timer = "3.0.2"
serde = { version = "1.0.116", features = ["derive", "rc"] }
serde_json = "1.0.59"
strum = "0.19.5"
strum_macros = "0.19.4"
#docx-rs = "0.2"
#tinytemplate = "1.2.1"
tera = { version = "1", default-features = false }
lazy_static = "1.5.0"
unidecode = "0.3.0"
mini_markdown = "0.3.5"
urlencoding = "2.1.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rfd = { version = "0.14.1" }
dioxus = { version = "0.5.6", default-features = false, features = ["web", "macro", "html", "signals", "hooks", "launch" ] }
wasm-bindgen = "0.2.92"
getrandom = { version = "0.2.3", features = ["js"]}
web-sys = { version = "0.3", features = [ "Storage", "Window" ] }
js-sys = "0.3.69"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = { version = "0.14.1", default-features = false, features = ["xdg-portal"] }
dioxus = { version = "0.5.6", features = ["desktop"] }
dioxus-desktop = "0.5.6"
getrandom = "0.2.3"
directories-next = "2.0.0"
tao = { version = "0.26.2", features = ["serde"]}

[profile.release]
#lto = true
#opt-level = 'z'
#codegen-units = 1
opt-level = 2 # fast and small wasm

